# Playbook

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  .pre-commit-config.yaml  .trivyignore  .trivyignore.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER_VERIFICATION.md  Dockerfile  INVESTIGATION.md  Makefile  README.md  REFACTORING_SUMMARY.md  SECURITY.md  STYLING_GUIDE.md  VERIFICATION.md  code-quality-verification.md  code_quality_check.py  entrypoint.sh  index.html  integration_test.py  integration_test_simple.py  linting_report.md  mkdocs.yml  nhl_pattern_verification_report.txt  package-lock.json  playbook.log.previous  pyproject.toml  qa_debug_imports.py  qa_final_validation.py  qa_validate_imports.py  qa_validate_yaml.py  requirements-dev.txt  requirements.txt  ruff_check_output.txt  sha256-test-verification-report.md  (+20 more)
.auto-claude/: .env.example
.auto-claude/specs/001-i-want-to-improve-the-new-matcher/: build-progress.txt  complexity_assessment.json  context.json  implementation_plan.json  init.sh  project_index.json  qa_report.md  requirements.json  spec.md  task_logs.json  task_metadata.json
.auto-claude/specs/001-i-want-to-improve-the-new-matcher/memory/: attempt_history.json  build_commits.json  codebase_map.json  gotchas.md
.auto-claude/specs/001-i-want-to-improve-the-new-matcher/memory/session_insights/: session_001.json  session_002.json  session_003.json  session_004.json  session_005.json  session_006.json  session_007.json  session_008.json  session_009.json  session_010.json  session_011.json  session_012.json  session_013.json  session_014.json  session_015.json  session_016.json  session_017.json  session_018.json  session_019.json  session_020.json  session_021.json  session_022.json  session_023.json  session_024.json  session_025.json  session_026.json  session_027.json  session_028.json  session_029.json  session_030.json  (+116 more)
.auto-claude/specs/032-1-4-2-develop-run-issues/: build-progress.txt  implementation_plan.json  investigation-notes-subtask-1-1.md
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  docs.yml  lint.yml  security-scan.yml
MATCHING_IMPROVEMENTS_PLAN/: index.html
assets/: index.html
changelog/: index.html
config/: playbook.sample.yaml
configuration/: index.html
developer-guide/: index.html
docs/: MATCHING_IMPROVEMENTS_PLAN.md  changelog.md  configuration.md  developer-guide.md  getting-started.md  index.md  integrations.md  operations.md  recipes.md  security.md  troubleshooting.md
docs/assets/: README.md
docs/snippets/: README.md  autobrr-filter.md  cron-batch-job.md  notifications-autoscan.md  systemd-watcher-service.md
getting-started/: index.html
integrations/: index.html
operations/: index.html
recipes/: index.html
scripts/: bootstrap_and_test.sh  generate_lockfiles.sh  plex_metadata_sync.py  verify_docker_build.sh
search/: search_index.json
security/: index.html
snippets/: index.html
snippets/autobrr-filter/: index.html
snippets/cron-batch-job/: index.html
snippets/notifications-autoscan/: index.html
snippets/systemd-watcher-service/: index.html
src/playbook/: __init__.py  banner.py  cache.py  cli.py  command_help.py  config.py  contexts.py  destination_builder.py  file_discovery.py  help_formatter.py  kometa_trigger.py  logging_utils.py  match_handler.py  matcher.py  metadata.py  metadata_loader.py  models.py  notifications.py  pattern_templates.py  pattern_templates.yaml  plex_client.py  plex_metadata_sync.py  plex_sync_state.py  post_run_triggers.py  processing_state.py  processor.py  quality.py  quality_scorer.py  reconciliation.py  run_summary.py  session_index.py  summary_table.py  team_aliases.py  templating.py  trace_writer.py  utils.py  validation.py  validation_output.py  version.py  watcher.py
src/playbook.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/playbook/gui/: __init__.py  app.py  log_handler.py  state.py  styles.py  theme.py  themes.py  utils.py
src/playbook/gui/components/: __init__.py  activity_feed.py  app_button.py  episode_row.py  header.py  log_viewer.py  progress_bar.py  season_section.py  stats_card.py  status_chip.py
src/playbook/gui/config_utils/: __init__.py  config_persistence.py
src/playbook/gui/data/: __init__.py  sport_data.py
src/playbook/gui/pages/: __init__.py  config.py  dashboard.py  logs.py  sports.py  unmatched.py
src/playbook/gui/settings_state/: __init__.py  settings_state.py
src/playbook/matcher/: __init__.py  core.py  date_utils.py  episode_selector.py  orchestrator.py  season_selector.py  session_resolver.py  similarity.py  structured.py  team_resolver.py
src/playbook/notifications/: __init__.py  autoscan.py  batcher.py  discord.py  email.py  plex_scan.py  service.py  slack.py  types.py  utils.py  webhook.py
src/playbook/parsers/: __init__.py  structured_filename.py
src/playbook/persistence/: __init__.py  manual_override_store.py  metadata_cache.py  processed_store.py  unmatched_store.py
src/playbook/tvsportsdb/: __init__.py  adapter.py  cache.py  client.py  models.py
tests/: BENCHMARK_TESTS.md  conftest.py  test_banner.py  test_cache.py  test_cli.py  test_config.py  test_config_validation.py  test_destination_builder.py  test_file_discovery.py  test_help_formatter.py  test_integrations_config.py  test_issue_74_reproduction.py  test_kometa_trigger.py  test_logging_utils.py  test_manual_override_store.py  test_match_handler.py  test_matcher.py  test_metadata.py  test_notifications.py  test_pattern_samples.py  test_persistence.py  test_plex_client.py  test_plex_metadata_sync.py  test_plex_sync_state.py  test_processor.py  test_quality.py  test_quality_integration.py  test_quality_scorer.py  test_reconciliation.py  test_run_summary.py  test_session_index.py  test_structured_matcher.py  test_summary_table.py  test_team_aliases.py  test_trace_writer.py  test_tvsportsdb_adapter.py  test_tvsportsdb_cache.py  test_tvsportsdb_client.py  test_tvsportsdb_models.py  test_unmatched_store.py  (+3 more)
tests/data/: pattern_samples.yaml
troubleshooting/: index.html
(+24 files in other folders)
