[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playbook"
version = "2.18.0"
description = "Automated file matching, renaming, and metadata for sports content in Plex"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "s0len"}
]
keywords = ["sports", "plex", "automation", "metadata", "sonarr", "media-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "PyYAML==6.0.3",
    "jsonschema==4.26.0",
    "requests==2.32.5",
    "python-dateutil==2.9.0.post0",
    "rich==14.3.3",
    "tenacity==9.1.4",
    "rapidfuzz==3.14.3",
    "watchdog==6.0.0",
    "kubernetes==35.0.0",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "browser-use>=0.11.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "mkdocs-material>=9.5,<10",
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
]
gui = [
    "nicegui>=3.6",
]

[project.urls]
Homepage = "https://github.com/s0len/Playbook"
Documentation = "https://s0len.github.io/Playbook/"
Repository = "https://github.com/s0len/Playbook"
Issues = "https://github.com/s0len/Playbook/issues"

[tool.ruff]
line-length = 120
target-version = "py312"

# Exclude directories
exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
    ".worktrees",
    "build",
    "dist",
    ".tox",
]

[tool.ruff.lint]
# Enable rule sets
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "C4",   # comprehensions
    "SIM",  # simplify
    "TCH",  # type-checking
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
# Tests can have assertions, magic values, and less strict rules
"tests/**/*.py" = [
    "B011",  # Do not use assert False
    "SIM300", # Yoda conditions
    "E402",  # Allow module imports not at top (test fixtures, etc.)
    "E501",  # Allow long lines in tests (long test strings, etc.)
]
# Scripts and root level test files can be more flexible
"*.py" = ["TCH"]  # Don't enforce TYPE_CHECKING in root scripts
# Long lines in help text strings (Docker commands, examples) — breaking them hurts copy-paste
"src/playbook/command_help.py" = ["E501"]
# Nested ifs where collapsing would hurt readability (guard-then-compare patterns)
"src/playbook/match_handler.py" = ["SIM102"]
"src/playbook/matcher/structured.py" = ["SIM102"]
"src/playbook/processor.py" = ["SIM102"]
# GUI module - NiceGUI uses nested context managers for UI structure, function defaults for bindings
"src/playbook/gui/**/*.py" = ["E501", "B008", "SIM102", "SIM105", "SIM117"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Format code snippets in docstrings
docstring-code-format = true
